...
          color: AppColor.lineNormalNeutral,
          margin: const EdgeInsets.symmetric(horizontal: 8),
        ),
        TextButton(
          onPressed: () => controller.continueAsGuest(),
          child: Text(
            '게스트로 로그인',
            style: AppTextStyles.label1NormalMedium.copyWith(
              color: AppColor.labelAlternative,
            ),
          ),
        ),
      ],
...
