...
                      '커플래닛을 찾게 된',
                      style: AppTextStyles.heading1Bold.copyWith(
                        color: AppColor.labelNormal,
                      ),
                    ),
                    Text(
                      '이유를 알려주세요.',
                      style: AppTextStyles.heading1Bold.copyWith(
                        color: AppColor.labelNormal,
                      ),
                    ),
                    const SizedBox(height: 8),

...
  Widget _buildBottomCTA() {
    return Container(
      padding: const EdgeInsets.fromLTRB(24, 16, 24, 34),
      decoration: BoxDecoration(color: AppColor.backgroundNormalNormal),
      child: Obx(
        () => PrimaryButton(
          text: '완료',
          onPressed: controller.complete,
          isEnabled: controller.hasSelection,
        ),
      ),
    );
  }
...
